<resources>
    <string name="app_name">WriTest</string>
    <string name="choose_file_from_phone_str">Sfoglia dal telefono</string>
    <string name="label_take_photo_str">Scatta una foto</string>
    <string name="attention_ui_str">Attenzione</string>
    <string name="cancel_ui_str">Annulla</string>
    <string name="goOn_str">Ok</string>
    <string name="question_delete_confirm_str">Vuoi scegliere un altro file ?</string>
    <string name="inserisci_la_tua_password">inserisci la tua password</string>
    <string name="inserisci_la_tua_email">inserisci la tua email</string>
    <string name="scegli_una_password"><font size="17">scegli una password</font></string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="info_scheda_invio">Informazioni: \nCon il pulsante \'Nuovo Invio\' è possibile inviare una immagine ed un video per una diagnosi automatica della disgrafia. E\' possibile scegliere immagini e video dalla memoria del dispositivo (galleria, cloud ecc...) oppure, alternativamente, è possibile scattare una foto e registrare un video da inviare. L\'immagine deve rappresentare una fotografia del foglio del test, il video la registrazione della postura dell\'individuo durante l\'esecuzione del test.</string>
    <string name="mostra_immagine_str">Mostra Immagine</string>
    <string name="errore_caricamento_dati_dalla_memoria_locale_str">Dato non trovato o assente</string>
    <string name="data_invio_str">Data Invio</string>
    <string name="token_str">Token</string>
    <string name="classe_str">Classe</string>
    <string name="mostra_video">Mostra Video</string>
    <string name="scuola_str">Scuola</string>
    <string name="email_non_verificata_str">email non verificata</string>
    <string name="verifica_email_necessaria_str">verifica email necessaria</string>
    <string name="message_dialog_verifica_email_str">Per accedere devi confermare l\'email che ti è stata inviata.</string>
    <string name="chiudi_str">Chiudi</string>
    <string name="invio_completato_message_str">L\'invio è stato completato con successo</string>
    <string name="invio_completato_title">Invio completato</string>
    <string name="notification_message">notifica di WriTest app</string>
    <string name="sincronizzazione_in_corso">Sincronizzazione in corso...</string>
    <string name="mostra_diagnosi">Mostra diagnosi</string>
    <string name="sei_già_registrato_str">ti sei già registrato?</string>

</resources>
